tests/specs/ecosystem/bureaudouble/outils/0_0_55.test
bureaudouble/outils/0.0.55
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'DOMParserSupportedType'.
  mimeType?: DOMParserSupportedType;
             ~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/createVirtualNode.ts:4:14

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const partialTrigger = (node: HTMLElement, {}: {
                                     ~~~~~~~~~~~
    at file://<tmpdir>/fresh/createPartial.ts:1:38

Found 2 errors.

